RESOLVED FIXED153585
[ThreadedCompositor] Fix flickers happening on video when entering/leaving fullscreen.
https://bugs.webkit.org/show_bug.cgi?id=153585
Summary [ThreadedCompositor] Fix flickers happening on video when entering/leaving fu...
ChangSeok Oh
Reported 2016-01-28 01:04:05 PST
When a video enters or leaves fullscreen, the snapshot of the video flickers. This issue was once discussed with yoon in github.
Attachments
Patch (1.96 KB, patch)
2016-01-28 01:09 PST, ChangSeok Oh
no flags
ChangSeok Oh
Comment 1 2016-01-28 01:09:51 PST
ChangSeok Oh
Comment 2 2016-01-28 01:11:08 PST
@yoon, looks good to you?
Gwang Yoon Hwang
Comment 3 2016-01-28 02:24:52 PST
Comment on attachment 270102 [details] Patch As we discussed at the hackfest! Looks good to me.
Michael Catanzaro
Comment 4 2016-01-28 11:10:10 PST
Comment on attachment 270102 [details] Patch rs=me since it's approved by Yoon
ChangSeok Oh
Comment 5 2016-01-28 11:13:44 PST
Oh, Cool. I did not expect r+ from you Michael. Thanks!
WebKit Commit Bot
Comment 6 2016-01-28 12:03:38 PST
Comment on attachment 270102 [details] Patch Clearing flags on attachment: 270102 Committed r195771: <http://trac.webkit.org/changeset/195771>
WebKit Commit Bot
Comment 7 2016-01-28 12:03:42 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.