[ThreadedCompositor] Fix flickers happening on video when entering/leaving fullscreen. https://bugs.webkit.org/show_bug.cgi?id=153585

Reviewed by Michael Catanzaro.

Video thumbnail flickers where threaded compositor is enabled. This is because
a content buffer is not set to a target layer which changes before swapBuffer.
This is a very rare case though, it happens where video size changes many times in a short period.

* platform/graphics/texmap/TextureMapperPlatformLayerProxy.cpp:
(WebCore::TextureMapperPlatformLayerProxy::activateOnCompositingThread):


Canonical link: https://commits.webkit.org/171682@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195771 268f45cc-cd09-0410-ab3c-d52691b4dbfc